samples/_failures_safe/1760961581_79a76c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00100b4f.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_00100b4f.c:151:24: error: missing terminating " character
  151 |                 printf("STRING: \"%s\"\n
      |                        ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_00100b4f.c:151:17: error: expected expression at end of input
  151 |                 printf("STRING: \"%s\"\n
      |                 ^~~~~~
./samples/SAFE/__tmp_00100b4f.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00100b4f.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00100b4f.c:151:17: error: expected declaration or statement at end of input
